--- a/app/assets/stylesheets/alchemy/user_manual.scss
+++ b/app/assets/stylesheets/alchemy/user_manual.scss
@@ -2,9 +2,7 @@
   padding: 0 16px 16px;
   line-height: 1.6;
 
-  a {
-    text-decoration: underline;
-  }
+  a { text-decoration: underline }
 
   h1,h2,h3,h4,h5,h6 {
     margin: 20px 0 10px;
