--- a/app/views/alchemy/admin/user_manual/show.html.erb
+++ b/app/views/alchemy/admin/user_manual/show.html.erb
@@ -1,5 +1,6 @@
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag 'alchemy/user_manual' %>
+  <%= stylesheet_link_tag 'alchemy/user_manual',
+    'data-turbolinks-track' => true %>
 <% end %>
 <% content_for :javascripts do %>
   <%= javascript_include_tag 'alchemy/user_manual' %>
