Use Alchemy.t method for translations

--- a/lib/alchemy/user_manual/templates/elements.md.erb
+++ b/lib/alchemy/user_manual/templates/elements.md.erb
@@ -1,10 +1,10 @@
-## 2. <a name="elements"></a> <%= I18n.t("element_descriptions", :scope => "user_manual") %>
+## 2. <a name="elements"></a> <%= Alchemy.t("element_descriptions", scope: "user_manual") %>
 
 <% Alchemy::Element.definitions.each do |e| %>
 
 ### <a name="<%= element_anchor_name(e.values.first) %>"></a><%= translated_element_name(e.values.first) %>
 
-<%= I18n.t(e.values.first, scope: 'element_hints', default: e['hint'] || I18n.t("no_description", :scope => "user_manual")) %>
+<%= Alchemy.t(e.values.first, scope: 'element_hints', default: e['hint'] || Alchemy.t("no_description", scope: "user_manual")) %>
 
 |<%= element_properties(e).map {|p| "#{property_name(p)}" }.join("|") %>|
 |<%= element_properties(e).map {|p| "---" }.join("|") %>|
