--- a/lib/alchemy/user_manual/templates/introduction.md.erb
+++ b/lib/alchemy/user_manual/templates/introduction.md.erb
@@ -1,3 +1,3 @@
-# <%= I18n.t("manual_for", :project_name => @manual.name, :scope => "user_manual") %>
+# <%= Alchemy.t("manual_for", project_name: @manual.name, scope: "user_manual") %>
 
-**<%= I18n.t("introduction_text", :scope => "user_manual") %>**
+**<%= Alchemy.t("introduction_text", scope: "user_manual") %>**
